k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: make-movies-redirect-http-https@kubernetescrd
  name: make-movies
  labels:
    app: make-movies
spec:
  ingressClassName: traefik
  rules:
    - host: "movies.ax-h.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  name : http
  tls:
    - hosts:
        - movies.ax-h.com
      secretName: make-movies-axh-com-tls
